welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: not found: value EST
setDirection(EST)
             ^DwarfCode:7: error: not found: value OUEST
  setDirection(OUEST)
               ^DwarfCode:13: error: not found: value EST
  setDirection(EST)
               ^