welcome.lessons.welcome.summative.Moria.scala.code
setDirection(EST)
while (!estFaceMur()) {
  while (!estSurBiscuit()) {
    avance()
  }
  prendBiscuit()
  setDirection(OUEST)
  while (!estSurBiscuit()) {
    avance()
  }
  recule()
  poseBiscuit()
  setDirection(EST)
}
droite()
avance()
gauche()
avance()